# rtvbp

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml
.github/workflows/: docker-build.yml  docker-publish.yml  docs-deploy.yml
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md  outlook.md
docs/docs/protov1/: _category_.json  client.md  examples.md  overview.md  proto.md  server.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
src/rtvbp-demo/: Cargo.toml  Dockerfile  README.md  fly.toml
src/rtvbp-demo/src/: agent.rs  client.rs  main.rs  server.rs
src/rtvbp-sdk/: Cargo.toml
src/rtvbp-sdk/examples/client_server/: main.rs
src/rtvbp-sdk/src/: handler.rs  lib.rs  server.rs  session.rs
src/rtvbp-sdk/src/websocket/: client.rs  mod.rs  server.rs
src/rtvbp-spec/: Cargo.toml  README.md
src/rtvbp-spec/src/v1/: event.rs  ext.rs  header.rs  message.rs  metadata.rs  mod.rs  request.rs  response.rs
src/rtvbp-spec/src/v1/docs/: asyncapischema.rs  generate.rs  mod.rs  provider.rs
src/rtvbp-spec/src/v1/op/: application.rs  audio.rs  log.rs  mod.rs  ping.rs  playback.rs  recording.rs  session.rs
