[package]
name = "rtvbp-demo"
version = "0.2.0"
edition = "2024"
resolver = "3"

[dependencies]
openai-realtime = "0.1.0"
codewandler-audio = "0.3.1"
fluxrpc-core = "0.31.0"
rtvbp-spec = {path = "../rtvbp-spec"}
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1.41"
crossbeam-channel = "0.5.15"
url = "2.5.4"
indexmap = { version = "2.9.0", features = ["serde"] }
serde_json = { version = "1.0.140", features = ["indexmap"] }

[[bin]]
name = "rtvbp-demo"
path = "src/main.rs"
