[package]
name = "rtvbp-sdk"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
rtvbp-spec = { version = "0.1.0", workspace = true }
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
ezsockets = { version = "0.7.0" , features = ["tungstenite"]}
tracing = "0.1.41"
nanoid = "0.4.0"
serde_json = "1.0.140"
anyhow = "1.0.98"

[dev-dependencies]
tracing-subscriber = "0.3.19"
