[package]
name = "rtvbp-spec"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
convert_case = "0.8.0"
indexmap = { version = "2.9.0", features = ["serde"] }
nanoid = "0.4.0"
schemars = { version = "0.9.0", features = ["chrono04", "indexmap2", "preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["indexmap"] }
serde_yaml = "0.9.34"

[[bin]]
path = "src/bin/generate.rs"
name = "rtvbp-spec-generate"
